correção no css background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url(/assets/images/bg-header-desktop.png);
+  background-image: url(./assets/images/bg-header-desktop.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
