--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url(./assets/images/bg-header-desktop.png);
+  background-image: url(../images/bg-header-desktop.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -92,12 +92,11 @@ body {
   -moz-box-shadow: 2px 4px 4px -1px rgba(112, 112, 112, 0.35);
 }
 
-/* ------------------ */
-
 .snippets {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 8rem;
 }
 
 .snippet-header {
@@ -109,7 +108,6 @@ body {
 .snippet-body {
   display: flex;
   align-items: center;
-  margin-bottom: 9rem;
 }
 
 h2 {
@@ -137,7 +135,7 @@ h2 {
 }
 
 .snippet-body-image img {
-  width: 162%;
+  width: 163%;
   position: relative;
   right: 64%;
 }
@@ -170,7 +168,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 4.8rem;
+  margin-bottom: 8rem;
 }
 
 .access img {
@@ -181,7 +179,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 4.8rem;
+  margin-bottom: 8rem;
 }
 
 .workflow-body {
@@ -231,12 +229,77 @@ h2 {
   flex: 1;
 }
 
+.download-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 8rem;
+}
+
 .download-2 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   gap: 1.25rem;
+}
+
+footer {
+  background-color: #f5f6f8;
+  -webkit-box-shadow: 0px -1px 3px 0px rgba(158, 158, 158, 0.28);
+  -moz-box-shadow: 0px -1px 3px 0px rgba(158, 158, 158, 0.28);
+  box-shadow: 0px -1px 3px 0px rgba(158, 158, 158, 0.28);
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  row-gap: 30px;
+  margin-left: 10.313rem;
+  margin-right: 10.313rem;
+  padding-top: 2.938rem;
+  padding-bottom: 2.938rem;
+}
+
+.footer-logo img {
+  max-width: 3.438rem;
+}
+
+.footer-contacts {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 80px;
+  row-gap: 10px;
+}
+
+.footer-contacts > div {
+  line-height: 1.5rem;
+  font-weight: 500;
+  font-size: 1rem;
+  color: hsl(201, 11%, 66%);
+}
+
+.footer-socialNetworks {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.attribution {
+  display: flex;
+  justify-content: center;
+  line-height: 1.5rem;
+  font-weight: 500;
+  font-size: 1rem;
+  color: hsl(201, 11%, 66%);
+  padding-bottom: 2.938rem;
+}
+
+.attribution a {
+  text-decoration: none;
+  color: hsl(246, 100%, 41%);
 }
 
 @media (max-width: 670px) {
@@ -281,6 +344,25 @@ h2 {
   .snippet-text {
     text-align: center;
     min-width: 20.938rem;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    align-items: center;
+  }
+  .footer-contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .attribution {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
